<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">TLive</string>
    <string name="ip_address">13.125.213.175</string>

    <string name="start_email">이메일로 시작하기</string>
    <string name="start_naver">네이버로 시작하기</string>
    <string name="naverStart">네이버 아이디로 시작하기</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_ko">로그인</string>
    <string name="join_ko">회원가입</string>
    <string name="join_email">이메일로 회원가입하기</string>
    <string name="password_need">Password *</string>
    <string name="email_needs">Email *</string>
    <string name="aggree_statement">회원가입 시 T Live의 개인정보 취급 방침 서비스 이용약관에 동의 하게 됩니다.</string>
    <string name="name_need">Name *</string>
    <string name="tasty_live">Tasty Live</string>
    <string name="create_by_kiwinam">Create by Kiwinam</string>
    <string name="male_ko">남자</string>
    <string name="female_ko">여자</string>
    <string name="_10">10</string>
    <string name="_20">20</string>
    <string name="_30">30</string>
    <string name="_40">40</string>
    <string name="_50">50+</string>
    <string name="opt_welcome">회원가입이 완료되었습니다! \n추가 정보를 입력해주시면 꼭 맞는 동영상을 추천해드려요!</string>
    <string name="opt_skip_ko">다음에 할래요</string>
    <string name="confirm_ko">확인</string>
    <string name="channel_ko">채널</string>
    <string name="live_ko">라이브</string>
    <string name="place_ko">맛집</string>
    <string name="follow_ko">팔로우</string>
    <string name="friend_ko">친구</string>
    <string name="hide_chat_ko">귓속말</string>
    <string name="recommend_rc">추천</string>
    <string name="recommend_ko">한식</string>
    <string name="recommend_jp">일식</string>
    <string name="recommend_ca">중식</string>
    <string name="recommend_ws">양식</string>
    <string name="use_mic_ko">마이크 사용</string>
    <string name="use_camera_ko">카메라 사용</string>
    <string name="update_ko" tools:ignore="TypographyEllipsis">업데이트 게시...</string>
    <string name="start_broadcast_ko">방송 시작하기</string>
    <string name="camera_on_ko">카메라 켜짐</string>
    <string name="mic_on_ko">마이크 켜짐</string>
    <string name="check_info_ko">방송을 시작하기 전에 확인해야 할 사항:</string>
    <string name="ready_broadcast_ko">방송을 시작할 준비가 되었습니다!</string>
    <string name="start_live_ko">방송 시작</string>
    <string name="set_broadcast_ko">방송 설정</string>
    <string name="send_ko">보내기</string>
    <string name="friend_detail_text">친구로 추가하여 온라인 상태를  확인하고 멋진 방송에 초대하세요</string>
    <string name="friend_text">친구와 함께 보기</string>
    <string name="add_friend_ko">친구 추가</string>
    <string name="close">close</string>
    <string name="filter_ko">필터</string>
    <string name="title_activity_maps">Map</string>
    <string name="_500m">500m</string>
    <string name="star_score_ko"><u>평점순</u></string>
    <string name="review_request_ko">이 식당에 대한 솔직한 평점을 들려주세요.</string>
    <string name="want_to_go_ko">가고싶다</string>
    <string name="tasty_normal_ko">괜찮다</string>
    <string name="tasty_good_ko">맛있다!</string>
    <string name="tasty_bad_ko">별로</string>
    <string name="copy_addr_ko">주소 복사</string>
    <string name="calling_ko">전화하기</string>
    <string name="search_blog_ko">블로그 검색하기</string>
    <string name="search_review_text_ko">이 식당의 블로그 리뷰가 궁금하신가요?</string>
    <string name="close_bracket">)</string>
    <string name="tasty_review_ko">맛깔나는 리뷰 (</string>
    <string name="more_review_ko">리뷰 더보기</string>
    <string name="show_more_ko">전체 사진 보기</string>
    <string name="write_review_ko">리뷰 쓰기</string>
    <string name="write_review_hint_ko">주문하신 메뉴는 어떠셨나요? 식당의 분위기나 서비스도 궁금해요!</string>
    <string name="cancel_ko">취소</string>
    <string name="_0_2000">완료 (0/2000)</string>
    <string name="profile">profile</string>
    <string name="edit">edit</string>
    <string name="back">back</string>
    <string name="all_review_ko">전체 리뷰 보기</string>
    <string name="movie_ko">동영상</string>
    <string name="like_ko">좋아요</string>
    <string name="chat_room_ko">채팅방</string>
    <string name="online_ko">온라인</string>
    <string name="offline_ko">오프라인</string>
    <string name="islive">isLive</string>
    <string name="subscribe_ko">구독하기</string>
    <string name="subscribe_text_ko">님을 구독하시겠습니까?</string>
    <string name="none_review_ko">아직 내가 올린 리뷰가 없네요?</string>
    <string name="none_movie_ko">아직 내가 올린 동영상이 없네요?</string>
    <string name="_0">0</string>
    <string name="follower_ko">팔로워</string>
    <string name="viewer_ko">시청자</string>
    <string name="edit_ko">수정</string>
    <string name="logout">logout</string>
    <string name="logout_ko">로그아웃</string>
    <string name="right">right</string>
    <string name="preview">preview</string>
    <string name="vod">VOD</string>
    <string name="none_want_ko">아직 내가 가고싶은 곳이 없어요!</string>
    <string name="none_like_ko">아직 내가 좋아하는 글이 없어요!</string>
    <string name="setting">setting</string>
    <string name="search">search</string>
    <string name="person">person</string>
    <string name="none_follow_ko">팔로우 중인 채널이 없네요!</string>
    <string name="review_ko">리뷰</string>
    <string name="logo">logo</string>
    <string name="logo_text_ko">함께하는 즐거운 먹방</string>

    <string name="default_notification_channel_id">channel id</string>
</resources>
