<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="#fff"
        android:elevation="2dp"
        >
        <ImageView
            android:id="@+id/settingCloseIv"
            android:src="@drawable/ic_close_orange"
            android:padding="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/close" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp">
            <LinearLayout
                android:id="@+id/settingProfileLo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:id="@+id/settingProfileIv"
                    android:src="@drawable/ic_profile_ex1"
                    android:padding="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/profile" />
                <TextView
                    android:id="@+id/settingNameTv"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/settingFollowerLo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/settingProfileLo"
                android:layout_marginStart="16dp"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/settingFollowerCountTv"
                    android:text="@string/_0"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    />
                <TextView
                    android:text="@string/follower_ko"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/settingFollowerLo"
                android:layout_marginStart="16dp"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/settingViewerTv"
                    android:text="@string/_0"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    />
                <TextView
                    android:text="@string/viewer_ko"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:background="@drawable/sp_gray_round_box"
                tools:ignore="RelativeOverlap">
                <ImageView
                    android:src="@drawable/ic_edit_gray_24dp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:padding="2dp"
                    android:contentDescription="@string/edit" />
                <TextView
                    android:text="@string/edit_ko"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settingLogoutLo"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="#fff"
        android:elevation="2dp"
        >
        <ImageView
            android:src="@drawable/ic_logout"
            android:padding="12dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/logout" />
        <TextView
            android:text="@string/logout_ko"
            android:layout_centerVertical="true"
            android:layout_marginStart="56dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:src="@drawable/ic_arrow_right_gray"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/right" />
    </RelativeLayout>

</LinearLayout>