<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:gravity="center"
        >
        <RelativeLayout
            android:layout_weight="8.5"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/optLogoIv"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                />
            <TextView
                android:id="@+id/optWelcomeTv"
                android:gravity="center"
                android:text="@string/opt_welcome"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/optLogoIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:background="@drawable/sp_gra_gray_line"
                android:layout_below="@id/optWelcomeTv"
                android:layout_marginTop="24dp"
                />
            <TextView
                android:id="@+id/optGenderTv"
                android:layout_below="@id/optWelcomeTv"
                android:text="성별"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                />
            <LinearLayout
                android:id="@+id/optGenderLo"
                android:layout_below="@id/optGenderTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                >
                <Button
                    android:id="@+id/optGenderMaleBtn"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:text="@string/male_ko"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/sp_left_line_rect"
                    />
                <Button
                    android:id="@+id/optGenderFeMaleBtn"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:text="@string/female_ko"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/sp_right_line_rect"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/optAgeTv"
                android:layout_below="@id/optGenderLo"
                android:text="연령대"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                />
            <LinearLayout
                android:id="@+id/optAgeLo"
                android:layout_below="@id/optAgeTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                >
                <Button
                    android:id="@+id/optAge10Btn"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:text="@string/_10"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/sp_left_line_rect"
                    />
                <Button
                    android:id="@+id/optAge20Btn"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:text="@string/_20"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/sp_midle_line_rect"
                    />
                <Button
                    android:id="@+id/optAge30Btn"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:text="@string/_30"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/sp_midle_line_rect"
                    />
                <Button
                    android:id="@+id/optAge40Btn"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:text="@string/_40"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/sp_midle_line_rect"
                    />
                <Button
                    android:id="@+id/optAge50Btn"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:text="@string/_50"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/sp_right_line_rect"
                    />

            </LinearLayout>
            <Button
                android:id="@+id/optSubmitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/sp_orange_filled_rounded_box"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/confirm_ko"
                android:textColor="@color/colorTextWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="36dp"
                android:layout_above="@id/optSkipBtn"
                />
            <Button
                android:id="@+id/optSkipBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opt_skip_ko"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:background="@null"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>