<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        >
        <TextView
            android:text="@string/tasty_review_ko"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <TextView
            android:id="@+id/detailReviewCountTv"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/close_bracket"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/detailReviewRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/detailMoreReviewTv"
        android:text="@string/more_review_ko"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawableEnd="@drawable/ic_arrow_right_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:padding="4dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:text="@string/search_review_text_ko"
            android:textSize="12sp"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/detailSearchBlogTv"
            android:text="@string/search_blog_ko"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="180dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/sp_detail_search_box"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            />
    </LinearLayout>
</LinearLayout>