<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#fff"
        >
        <ImageView
            android:id="@+id/subCloseIv"
            android:src="@drawable/ic_arrow_drop_down_black_24dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/back" />
        <TextView
            android:id="@+id/subNameTv"
            android:layout_centerVertical="true"
            android:layout_marginStart="56dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>
    <View
        android:layout_marginTop="56dp"
        android:background="#c7c7c7"
        android:layout_width="match_parent"
        android:layout_height="0.75dp"/>
    <TextView
        android:id="@+id/subTextTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/subscribe_text_ko"
        android:gravity="center"
        android:layout_width="280dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/subBtn"
        android:layout_below="@id/subTextTv"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/subscribe_ko"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        />
</RelativeLayout>