<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <!--<ImageView
        android:src="@drawaic_selfie_movelfie"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="matrix"
        android:foreground="#6affb300"
        />-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/sp_selfie_rect"
        >
        <TextView
            android:text="방송 설정"
            android:textColor="@color/colorTextWhite"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/livePerCloseIv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:src="@drawable/ic_close_white_24dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        >
        <TextView
            android:id="@+id/livePerInfoTv"
            android:text="@string/check_info_ko"
            android:textSize="14sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="136dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/livePerOKCameraTv"
            android:text="@string/camera_on_ko"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_above="@id/livePerMicBtn"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/ic_check_orange_24dp"
            android:drawablePadding="4dp"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/livePerCameraBtn"
            android:text="@string/use_camera_ko"
            android:textColor="@color/colorTextWhite"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_above="@id/livePerMicBtn"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/sp_middle_solid_rect"
            android:elevation="2dp"
            />
        <TextView
            android:id="@+id/livePerOKMicTv"
            android:text="@string/mic_on_ko"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/ic_check_orange_24dp"
            android:drawablePadding="4dp"
            />
        <Button
            android:id="@+id/livePerMicBtn"
            android:text="@string/use_mic_ko"
            android:textColor="@color/colorTextWhite"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/sp_middle_solid_rect"
            android:elevation="2dp"
            />
        <Button
            android:id="@+id/livePerStartBtn"
            android:text="@string/start_broadcast_ko"
            android:textColor="@color/colorTextWhite"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/sp_middle_solid_rect"
            android:elevation="2dp"
            android:visibility="gone"
            />
    </RelativeLayout>
    <ImageView
        android:src="@drawable/ic_selfie_move"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="380dp"
        android:layout_marginTop="100dp"
        />
</RelativeLayout>