<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout android:id="@+id/channelSwipeLo"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/channelOnlineLo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/channelOnlineTv"
                    android:text="@string/online_ko"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/channelOnlineRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/channelOfflineLo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/channelOnlineLo"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/channelOfflineTv"
                    android:text="@string/offline_ko"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/channelOfflineRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:id="@+id/channelNoneTv"
                android:layout_marginTop="150dp"
                android:layout_centerInParent="true"
                android:text="@string/none_follow_ko"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.tuyenmonkey.mkloader.MKLoader
                android:id="@+id/channelPb"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:mk_type="TwinFishesSpinner"
                app:mk_color="@color/colorPrimary"
                />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
